mobile version fix

--- a/main.css
+++ b/main.css
@@ -148,6 +148,10 @@ body {
         letter-spacing: -1px; /* Adjust letter spacing if needed */
     }
 
+    .description {
+        margin-right: calc(5%);
+    }
+
     .description p {
         font-size: 14px;
         line-height: 24px;
