--- a/main.css
+++ b/main.css
@@ -195,7 +195,7 @@ body {
 
     .main {
         margin-top: calc(13%);
-        height: 400px; 
+        height: unset !important; 
         margin-right: calc(7%);  
         margin-left: calc(8%);  
         position: relative;
